--- a/src/components/Button/index.scss
+++ b/src/components/Button/index.scss
@@ -1,5 +1,4 @@
-@import "assets/scss/_colors.scss";
-@import "assets/scss/_size.scss";
+@import "assets/scss/_variables.scss";
 
 .component-button {
   background-color: white;
