add detail page

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -2,6 +2,8 @@
 @import "assets/scss/parts/testimonial.scss";
 @import "assets/scss/parts/hero.scss";
 @import "assets/scss/parts/catalogue.scss";
+@import "assets/scss/parts/gallery.scss";
+@import "assets/scss/parts/product_desc.scss";
 
 @import "components/Button/index.scss";
 @import "components/Logo/index.scss";
