--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -4,6 +4,7 @@
 @import "assets/scss/parts/catalogue.scss";
 @import "assets/scss/parts/gallery.scss";
 @import "assets/scss/parts/product_desc.scss";
+@import "assets/scss/parts/auth_page.scss";
 
 @import "components/Button/index.scss";
 @import "components/Logo/index.scss";
